# routes/user.js
@@ -3,11 +3,12 @@ const router = express.Router();
 
 const userController = require('../controllers/user');
 
+
 router.get('/', userController.getAll);
 
 router.get('/:username', userController.getUser);
 
-router.post('/', userController.create);
+router.post('/', userController.createUser);
 
 router.put('/:username', userController.updateUser);
 
