# swaggerDoc.json
@@ -21,57 +21,17 @@
         }
       }
     },
-    "/user/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/user/{username}": {
       "get": {
+        "tags": ["user"],
+        "summary": "Get a User",
         "description": "",
+        "operationId": "getUser",
         "parameters": [
           {
             "name": "username",
             "in": "path",
+            "description": "username that need to be find",
             "required": true,
             "type": "string"
           }
@@ -86,91 +46,284 @@
         }
       },
       "put": {
+        "tags": ["user"],
+        "summary": "Updated user",
         "description": "",
+        "operationId": "updateUser",
         "parameters": [
           {
             "name": "username",
             "in": "path",
+            "description": "name that need to be updated",
             "required": true,
             "type": "string"
           },
           {
-            "name": "body",
             "in": "body",
+            "name": "body",
+            "description": "Updated user object",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "example": "any"
-                },
-                "displayName": {
-                  "example": "any"
-                },
-                "specialty": {
-                  "example": "any"
-                },
-                "profile": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/User"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Successfully modified user"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid user supplied"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "404": {
+            "description": "User not found"
           }
         }
       },
       "delete": {
+        "tags": ["user"],
+        "summary": "Delete User",
         "description": "",
+        "operationId": "deleteUser",
         "parameters": [
           {
             "name": "username",
             "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/specialty/{specialty}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "specialty",
-            "in": "path",
+            "description": "The name that needs to be deleted",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Successfully deleted user"
+          },
+          "400": {
+            "description": "Invalid username supplied"
           },
           "404": {
-            "description": "Not Found"
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/user": {
+      "get": {
+        "tags": ["user"],
+        "summary": "Get all users",
+        "operationId": "getAllUsers",
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Array",
+              "$ref": "#/definitions/User"
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Error occurred"
+          }
+        }
+      },
+      "post": {
+        "tags": ["user"],
+        "summary": "Create user",
+        "description": "This is for when a user creates an account",
+        "operationId": "createUser",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created user object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Credentials"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "A User object",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    }
+  },
+  "securityDefinitions": {
+    "petstore_auth": {
+      "type": "oauth2",
+      "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
+      "flow": "implicit",
+      "scopes": {
+        "write:pets": "modify pets in your account",
+        "read:pets": "read your pets"
+      }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "required": ["password", "username"],
+      "properties": {
+        "_id": {
+          "type": "integer",
+          "format": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "displayName": {
+          "type": "string"
+        },
+        "specialty": {
+          "type": "string"
+        },
+        "profile": {
+          "$ref": "#/definitions/User_profile"
+        }
+      }
+    },
+    "Specialty": {
+      "type": "object",
+      "required": ["colors", "fontFamily", "fontSize", "name"],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string",
+          "example": "Cardiology"
+        },
+        "fontSize": {
+          "type": "integer",
+          "example": 18
+        },
+        "fontFamily": {
+          "type": "string",
+          "example": "futura"
+        },
+        "inspiration": {
+          "type": "string",
+          "example": "https://www.example.com/"
+        },
+        "colors": {
+          "type": "array",
+          "example": ["", "#111", "#fff", "#F5F3EE", "#757575", "#7e7e7e", ", ", ", ", ""],
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "Credentials": {
+      "type": "object",
+      "required": ["password", "username"],
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "User_profile_experience": {
+      "type": "object",
+      "properties": {
+        "jobTitle": {
+          "type": "string"
+        },
+        "jobDescription": {
+          "type": "string"
+        },
+        "dateStart": {
+          "type": "string"
+        },
+        "dateEnd": {
+          "type": "string"
+        },
+        "company": {
+          "type": "string"
+        },
+        "location": {
+          "type": "string"
+        }
+      }
+    },
+    "User_profile_education": {
+      "type": "object",
+      "properties": {
+        "institution": {
+          "type": "string"
+        },
+        "programTitle": {
+          "type": "string"
+        },
+        "programDescription": {
+          "type": "string"
+        },
+        "dateStart": {
+          "type": "string"
+        },
+        "dateEnd": {
+          "type": "string"
+        },
+        "completed": {
+          "type": "boolean"
+        },
+        "location": {
+          "type": "string"
+        }
+      }
+    },
+    "User_profile_references": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "relationship": {
+          "type": "string"
+        },
+        "contactInfo": {
+          "type": "string"
+        },
+        "yearsKnown": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "knownFromWhere": {
+          "type": "string"
+        }
+      }
+    },
+    "User_profile": {
+      "type": "object",
+      "properties": {
+        "experience": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/User_profile_experience"
+          }
+        },
+        "education": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/User_profile_education"
+          }
+        },
+        "references": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/User_profile_references"
           }
         }
       }
